Bug 56697 - [bug] output transform+record corrupts and locks-up Weston
Summary: [bug] output transform+record corrupts and locks-up Weston
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium critical
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-02 21:14 UTC by U. Artie Eoff
Modified: 2012-11-26 23:06 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
weston configuration file (1.20 KB, text/plain)
2012-11-02 21:14 UTC, U. Artie Eoff
Details
Weston Info Output (3.39 KB, text/plain)
2012-11-02 21:15 UTC, U. Artie Eoff
Details
Snapshot of corrupted/garbled display (1.12 MB, image/png)
2012-11-02 21:15 UTC, U. Artie Eoff
Details
Crash Backtrace from gdb after second record attempt (10.05 KB, text/plain)
2012-11-02 21:17 UTC, U. Artie Eoff
Details
Lockup backtrace after second record attempt (17.66 KB, text/plain)
2012-11-02 21:18 UTC, U. Artie Eoff
Details
X11-backend 90 degree transform corruption (1.61 MB, image/png)
2012-11-05 17:10 UTC, U. Artie Eoff
Details
corrupted rendering transform 180 video (827.21 KB, video/webm)
2012-11-05 17:27 UTC, U. Artie Eoff
Details

Description U. Artie Eoff 2012-11-02 21:14:49 UTC
Created attachment 69461 [details]
weston configuration file

Recording on multihead display configuration with weston-drm is unstable and unpredictable...

On my sandybridge ultrabook with an LVDS+VGA multihead setup I have the LVDS transform set to 90 degrees and VGA at default settings.  When running Weston-drm in this configuration, an attempt to record via <Super>+r more than once in the same Weston-drm session causes Weston to lock-up or crash.  Also, during the first recording instance, moving the mouse over the weston-desktop-shell toolbar on the VGA output results in garbled/corrupted rendering.

See attachments.

Steps
------
Using the attached weston.ini configuration file and a LVDS+VGA display setup...
1. Launch weston-drm: weston --backend=drm-backend.so
2. Start recording with <Super>+r
3. Move mouse over the desktop toolbar on the VGA display.
   Issue: toolbar rendering becomes garbled/corrupted
4. Stop recording with <Super>+r
   Issue: weston logs "stopping recorder, total file size 1M, 0 frames"
   Issue: desktop rendering on VGA remains corrupted in some cases.
5. Start recording with <Super>+r
   Issue: weston will either crash at this point or lock-up

Software stack
--------------
cairo [image] (master) 1f4d05b55c96347aa4240190fda27f951b00c539
dri2proto (master) 4eeacce4c4a300b938b7e3fb78a8e443c491780b
drm (master) e32fff8e9ea8d522679eaab21a9555cab134fb36
glproto (master) ec1eec4355ee4a6c5134f2178192f10b6d28a87a
kbproto (master) 391a1f6de6315fc0196d407d800597488315cccb
libX11 (master) f2a8def423a46d52e834cf7ea49fa0079427663a
libxkbcommon (master) 998c957a3c7c861093f3f71f34989c258ed3073b
macros (master) 0890e4003aacfa7113ab3f4e3ad7c5636f8e922a
mesa (master) ebf0a96250050e1ed842598c7b2b3897c7f829b3
pixman (master) 4b91f6ca72db3e8cbd7e97e9ef44be2f8994040d
wayland (master) c4857e92321e85afe40fb66902cdddc14fbae05a
weston (master) 7109cc8b063fa32000810206b1f36f57d4d0c43b
Comment 1 U. Artie Eoff 2012-11-02 21:15:15 UTC
Created attachment 69462 [details]
Weston Info Output
Comment 2 U. Artie Eoff 2012-11-02 21:15:52 UTC
Created attachment 69463 [details]
Snapshot of corrupted/garbled display
Comment 3 U. Artie Eoff 2012-11-02 21:17:59 UTC
Created attachment 69466 [details]
Crash Backtrace from gdb after second record attempt
Comment 4 U. Artie Eoff 2012-11-02 21:18:30 UTC
Created attachment 69467 [details]
Lockup backtrace after second record attempt
Comment 5 U. Artie Eoff 2012-11-02 21:30:01 UTC
Turns out that this has nothing to do with multihead setup :/

I was able to reproduce the same issues whilst running on x11-backend and a 90 degree transform.

Revising summary as appropriate.
Comment 6 U. Artie Eoff 2012-11-05 17:10:57 UTC
Created attachment 69575 [details]
X11-backend 90 degree transform corruption

Corrupted rendering at 90 degree, 270 degree, flipped-90, and flipped-270 output transforms.
Comment 7 U. Artie Eoff 2012-11-05 17:27:38 UTC
Created attachment 69578 [details]
corrupted rendering transform 180 video

Transforms of 180, flipped, and flipped-180 don't lock up or corrupt weston rendering... however, the final recording is not captured properly (see attached video).
Comment 8 Kristian Høgsberg 2012-11-15 01:27:18 UTC
commit f0377dd3a7771dcc18019edcd3eb95fdd6bf259a
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Wed Nov 14 20:28:30 2012 -0500

    wcap: Transform damage rectangles according to output tranform
    
    https://bugs.freedesktop.org/show_bug.cgi?id=56697
Comment 9 U. Artie Eoff 2012-11-26 23:06:06 UTC
verified fix


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.